--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ section .heading h2
 {
     padding: 40px 30px;
 }
-#myCarousel .item h3
+#myCarousel .item a
 {
     color: #fff;
     font-style: italic;
