--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ section .heading h2
     }
 
     .timeline-panel-container, .timeline-panel-container-inverted {
-        width: 100%; /* Utiliser toute la largeur de l'écran */
+        width: 90%; /* Utiliser toute la largeur de l'écran */
         float: none; /* Supprimer la flottabilité */
     }
 
@@ -309,7 +309,7 @@ section .heading h2
 }
 .education-block
 {
-    width: 88%;
+    width: 90%;
     margin: 0 auto;
     text-align: center;
     background: #ddd;
@@ -392,7 +392,7 @@ section .heading h2
 }
 .contact-info {
     list-style: none;
-    padding: 0;
+    padding: 20px;
     color: #000;
 }
 .contact-info li {
